fixed names to stop text wrapping

--- a/frontend/src/components/SideBarLeft/SideBarLeft.css
+++ b/frontend/src/components/SideBarLeft/SideBarLeft.css
@@ -101,7 +101,7 @@
 
 .btn-hammersmith-city {
   background-color: rgb(244, 169, 190);
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .btn-jubilee {
@@ -126,6 +126,7 @@
 
 .btn-waterloo-city {
   background-color: rgb(106, 187, 170);
+  font-size: 1rem;
 }
 
 .underline-bakerloo {
